snippets/k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app # name of the deployment
  labels:
    app: node-app # labels added to the deployment
spec:
  replicas: 1 # number of replicas in the deployment
  selector:
    matchLabels:
      app: node-app # pods with this labels will be matched for this deployment
  template: # these is spec for the pods
    metadata:
      labels:
        app: node-app # add this label to the pods
    spec: # pod specs
      containers:
        # name of pod, while getting the pods with
        # kubectl get pods
        # replica set and a unique id will be added to the pod name
        # e.g. node-app-87asdf89-o8sud
      - name: node-app
        image: node-app # image to be deployed
        imagePullPolicy: Never # check local, other options: "Always" and "IfNotPresent"
        ports:
        - containerPort: 3000 # port of the container
